--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
     "main": "index.ts",
     "scripts": {
         "dev": "npx ts-node -r tsconfig-paths/register index.ts",
-        "build": "prisma generate",
+        "build": "prisma generate && tsc",
         "start": "node dist/index.js"
     },
     "dependencies": {
@@ -15,7 +15,8 @@
         "csv-parser": "^3.2.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^8.0.1"
     },
     "devDependencies": {
         "@meda/shared": "^1.0.0",
@@ -23,6 +24,7 @@
         "@types/express": "^4.17.17",
         "@types/multer": "^1.4.7",
         "@types/node": "^20.6.2",
+        "@types/nodemailer": "^7.0.9",
         "prisma": "^5.3.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
