--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,7 @@
         "csv-parser": "^3.2.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "module-alias": "^2.3.4",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^8.0.1"
     },
@@ -29,5 +30,8 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.0.0"
+    },
+    "_moduleAliases": {
+        "@meda/shared": "dist/packages/shared"
     }
 }
